--- a/public/404.html
+++ b/public/404.html
@@ -7,15 +7,15 @@
 <meta name="robots" content="index, follow">
 <title>404 Page not found | Ray</title>
 <meta name="keywords" content="">
-<meta name="description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod">
-<meta name="author" content="Theme PaperMod">
-<link rel="canonical" href="https://adityatelange.github.io/hugo-PaperMod/404.html">
-<link crossorigin="anonymous" href="/hugo-PaperMod/assets/css/stylesheet.fc033e5c5d4a80e735641b03e9471fae673d6ceee3a62a675e35a9553a755201.css" integrity="sha256-/AM&#43;XF1KgOc1ZBsD6Ucfrmc9bO7jpipnXjWpVTp1UgE=" rel="preload stylesheet" as="style">
-<link rel="icon" href="https://adityatelange.github.io/hugo-PaperMod/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="https://adityatelange.github.io/hugo-PaperMod/favicon-16x16.png">
-<link rel="icon" type="image/png" sizes="32x32" href="https://adityatelange.github.io/hugo-PaperMod/favicon-32x32.png">
-<link rel="apple-touch-icon" href="https://adityatelange.github.io/hugo-PaperMod/apple-touch-icon.png">
-<link rel="mask-icon" href="https://adityatelange.github.io/hugo-PaperMod/safari-pinned-tab.svg">
+<meta name="description" content="Blog">
+<meta name="author" content="Ray">
+<link rel="canonical" href="https://nzaba.github.io/404.html">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.7140587df96a2b1a49eb723fa7063dc0c641a6cb638f3140e8d3beb4deae4f5c.css" integrity="sha256-cUBYfflqKxpJ63I/pwY9wMZBpstjjzFA6NO&#43;tN6uT1w=" rel="preload stylesheet" as="style">
+<link rel="icon" href="https://nzaba.github.io/favicon.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="https://nzaba.github.io/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="https://nzaba.github.io/favicon-32x32.png">
+<link rel="apple-touch-icon" href="https://nzaba.github.io/apple-touch-icon.png">
+<link rel="mask-icon" href="https://nzaba.github.io/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -55,15 +55,15 @@
 
     </style>
 </noscript><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod" />
+<meta property="og:description" content="Blog" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://adityatelange.github.io/hugo-PaperMod/404.html" /><meta property="og:image" content="https://adityatelange.github.io/hugo-PaperMod/papermod-cover.png"/>
+<meta property="og:url" content="https://nzaba.github.io/404.html" /><meta property="og:image" content="https://nzaba.github.io/papermod-cover.png"/>
 
 <meta name="twitter:card" content="summary_large_image"/>
-<meta name="twitter:image" content="https://adityatelange.github.io/hugo-PaperMod/papermod-cover.png"/>
+<meta name="twitter:image" content="https://nzaba.github.io/papermod-cover.png"/>
 
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="Theme PaperMod - https://github.com/adityatelange/hugo-PaperMod"/>
+<meta name="twitter:description" content="Blog"/>
 
 </head>
 
@@ -82,7 +82,7 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="https://adityatelange.github.io/hugo-PaperMod/" accesskey="h" title="Ray (Alt + H)">Ray</a>
+            <a href="https://nzaba.github.io/" accesskey="h" title="Ray (Alt + H)">Ray</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
                     <svg id="moon" xmlns="http://www.w3.org/2000/svg" width="24" height="18" viewBox="0 0 24 24"
@@ -108,12 +108,12 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="https://adityatelange.github.io/hugo-PaperMod/search/" title="Search (Alt &#43; /)" accesskey=/>
+                <a href="https://nzaba.github.io/search/" title="Search (Alt &#43; /)" accesskey=/>
                     <span>Search</span>
                 </a>
             </li>
             <li>
-                <a href="https://adityatelange.github.io/hugo-PaperMod/tags/" title="Tags">
+                <a href="https://nzaba.github.io/tags/" title="Tags">
                     <span>Tags</span>
                 </a>
             </li>
@@ -125,11 +125,11 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2023 <a href="https://adityatelange.github.io/hugo-PaperMod/">Ray</a></span>
+    <span>&copy; 2024 <a href="https://nzaba.github.io/">Ray</a></span>
     <span>
-        Powered by
-        <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
-        <a href="https://github.com/adityatelange/hugo-PaperMod/" rel="noopener" target="_blank">PaperMod</a>
+        Made with
+        &#9749;&
+        &#10084; in 🇰🇪
     </span>
 </footer>
 <a href="#top" aria-label="go to top" title="Go to Top (Alt + G)" class="top-link" id="top-link" accesskey="g">
